--- a/services/visualization/public/index.html
+++ b/services/visualization/public/index.html
@@ -17,6 +17,7 @@
 </head>
 <body>
     <script type="module" src="SimpleObstacles.js"></script>
+    <script type="module" src="SimplePollution.js"></script>
     <script type="module" src="DataViewLoader.js"></script>
 
     <script type="module" src="Main.js"></script>
