--- a/services/visualization/public/index.html
+++ b/services/visualization/public/index.html
@@ -32,6 +32,7 @@
     </div>
 
     <script type="module" src="SimpleObstacles.js"></script>
+    <script type="module" src="SimplePollution.js"></script>
     <script type="module" src="DataViewLoader.js"></script>
 
     <script type="module" src="Main.js"></script>
