--- a/services/visualization/public/index.html
+++ b/services/visualization/public/index.html
@@ -30,10 +30,24 @@
         <p id="total-frames">0</p>
         <button id="next-frame-button" class="next round" disabled>&#8250;</button>
     </div>
+    <div style="margin-top: 15px; text-align: center;">
+        <button id="record-button">Record</button>
+    </div>
 
     <script type="module" src="SimpleObstacles.js"></script>
     <script type="module" src="SimplePollution.js"></script>
     <script type="module" src="DataViewLoader.js"></script>
+
+    <!-- Include WebM Writer if you want to export WebM -->
+    <script src="./capture/webm-writer-0.2.0.js"></script>
+    <!-- Include gifjs if you want to export GIF -->
+    <script src="./capture/gif.js"></script>
+    <!-- Include tar.js if you want to export PNG or JPEG -->
+    <script src="./capture/tar.js"></script>
+    <!-- Include download.js for easier file download -->
+    <script src="./capture/download.js"></script>
+
+    <script src="./capture/CCapture.js"></script>
 
     <script type="module" src="Main.js"></script>
 </body>
