--- a/services/visualization/public/index.html
+++ b/services/visualization/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8"/>
     <title>Three.js Tutorials by Sean Bradley : https://sbcode.net/threejs/</title>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <link rel="stylesheet" href="index.css">
 
     <script type="importmap">
             {
@@ -16,8 +17,38 @@
     </script>
 </head>
 <body>
+    <div style="width: 100%; height: 100%">
+        <div style="margin: 0 auto; width: 1500px; border: 1px solid;">
+            <div id="canvas"></div>
+        </div>
+    </div>
+    <div style="margin-top: 30px; text-align: center;">
+        <button id="previous-frame-button"  class="previous round" disabled>&#8249;</button>
+        <p>Frame </p>
+        <input class="input" type="number" id="frame" min="0" max="0" value="0" inputmode="numeric">
+        <p>of </p>
+        <p id="total-frames">0</p>
+        <button id="next-frame-button" class="next round" disabled>&#8250;</button>
+    </div>
+    <div style="margin-top: 15px; text-align: center;">
+        <button id="record-button">Record</button>
+    </div>
+
     <script type="module" src="SimpleObstacles.js"></script>
+    <script type="module" src="SimplePollution.js"></script>
     <script type="module" src="DataViewLoader.js"></script>
+    <script type="module" src="SimpleRoads.js"></script>
+
+    <!-- Include WebM Writer if you want to export WebM -->
+    <script src="./capture/webm-writer-0.2.0.js"></script>
+    <!-- Include gifjs if you want to export GIF -->
+    <script src="./capture/gif.js"></script>
+    <!-- Include tar.js if you want to export PNG or JPEG -->
+    <script src="./capture/tar.js"></script>
+    <!-- Include download.js for easier file download -->
+    <script src="./capture/download.js"></script>
+
+    <script src="./capture/CCapture.js"></script>
 
     <script type="module" src="Main.js"></script>
 </body>
